style(check code): 插件调整