@@ -1,36 +1,48 @@
+/*
+ * Copyright (c) 2025 The gateway Project
+ * https://github.com/taeyang0126/gateway
+ *
+ * Licensed under the MIT License.
+ * You may obtain a copy of the License at
+ *
+ *     https://opensource.org/licenses/MIT
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package com.lei.java.gateway.server.route;
-
-import com.alibaba.nacos.api.exception.NacosException;
-import com.lei.java.gateway.server.base.BaseIntegrationTest;
-import com.lei.java.gateway.server.route.nacos.NacosConfig;
-import com.lei.java.gateway.server.route.nacos.NacosConfigLoader;
-import com.lei.java.gateway.server.route.nacos.NacosServiceRegistry;
-import org.junit.jupiter.api.AfterAll;
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.Test;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import com.alibaba.nacos.api.exception.NacosException;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
+
+import com.lei.java.gateway.server.base.BaseIntegrationTest;
+import com.lei.java.gateway.server.route.nacos.NacosConfig;
+import com.lei.java.gateway.server.route.nacos.NacosConfigLoader;
+import com.lei.java.gateway.server.route.nacos.NacosServiceRegistry;
+
+import static org.assertj.core.api.Assertions.assertThat;
 
 public class NacosServiceRegistryIT extends BaseIntegrationTest {
 
-    private static String TEST_SERVICE_NAME;
-    private static NacosConfig nacosConfig;
+    private static String testServiceName;
     private static ServiceRegistry serviceRegistry;
     private static ServiceInstance testInstance;
 
     @BeforeAll
     public static void init() throws NacosException {
-        nacosConfig = NacosConfigLoader.load("nacos-test.properties");
+        NacosConfig nacosConfig = NacosConfigLoader.load("nacos-test.properties");
         serviceRegistry = new NacosServiceRegistry(nacosConfig);
-        TEST_SERVICE_NAME = "nacos-service-registry-test" + System.nanoTime();
+        testServiceName = "nacos-service-registry-test"
+                + System.nanoTime();
         Map<String, String> metadata = new HashMap<>();
         metadata.put("version", "1.0.0");
         metadata.put("environment", "test");
@@ -39,18 +51,18 @@ public class NacosServiceRegistryIT extends BaseIntegrationTest {
 
     @Test
     public void test() throws Exception {
-        serviceRegistry.registerService(TEST_SERVICE_NAME, testInstance);
-        List<ServiceInstance> services = serviceRegistry.getServices(TEST_SERVICE_NAME);
-        assertNotNull(services, "获取服务列表失败");
-        assertFalse(services.isEmpty(), "服务列表为空");
-        ServiceInstance registeredInstance = services.get(0);
-        assertEquals(testInstance.getHost(), registeredInstance.getHost(), "服务实例Host不匹配");
-        assertEquals(testInstance.getPort(), registeredInstance.getPort(), "服务实例Port不匹配");
+        serviceRegistry.registerService(testServiceName, testInstance);
+        List<ServiceInstance> services = serviceRegistry.getServices(testServiceName);
+        assertThat(services).isNotNull();
+        assertThat(services).isNotEmpty();
+        ServiceInstance registeredInstance = services.getFirst();
+        assertThat(registeredInstance.getHost()).isEqualTo(testInstance.getHost());
+        assertThat(registeredInstance.getPort()).isEqualTo(testInstance.getPort());
 
-        serviceRegistry.removeService(TEST_SERVICE_NAME, testInstance);
+        serviceRegistry.removeService(testServiceName, testInstance);
         TimeUnit.SECONDS.sleep(1);
-        List<ServiceInstance> servicesAfterRemoval = serviceRegistry.getServices(TEST_SERVICE_NAME);
-        assertTrue(servicesAfterRemoval.isEmpty(), "服务未能成功注销");
+        List<ServiceInstance> servicesAfterRemoval = serviceRegistry.getServices(testServiceName);
+        assertThat(servicesAfterRemoval.isEmpty()).isTrue();
     }
 
 }
